--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-PORT =""
+PORT = 3001
+PASSWORD ="isBvStxtBnxuyRCF";
+MONGO_URI = "mongodb+srv://fullstackopen:isBvStxtBnxuyRCF@persons.zlvy8x3.mongodb.net/?retryWrites=true&w=majority"
